--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "website",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "bootstrap": "^4.6.2"
+    "bootstrap": "^4.6.2",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
