--- a/netlify.toml
+++ b/netlify.toml
@@ -48,3 +48,9 @@ package = "netlify-plugin-checklinks"
     Content-Security-Policy = "frame-ancestors 'self';"
     X-Content-Type-Options = "nosniff"
     X-Frame-Options = "SAMEORIGIN"
+
+[dev]
+  functions = "netlify/functions"
+  framework = "#static"
+  port = 8888
+  envFiles = [".env"]
